HTML.css
header {
    font-family: 'Kdam Thmor Pro', sans-serif;
    text-align: center;
    text-decoration:dotted;
    background-color: lightcoral;
    color: darkred;
    font-size: 24px;
    position: fixed;
    padding-top: 10px;
    width: 100%;
    top: 0;
    left: 0;
}

#WELCOME {
    background-color: #FFBD33; 
    padding: 5%; 
    color: rgb(74, 157, 49);
 }

#About {
    background-color: #FFBD33; 
    padding: 10%; 
    color: rgb(74, 157, 49);
 
 }

body {
    font-family: 'Kdam Thmor Pro', sans-serif;
    font-size: 16px;
    background-color: grey;
    background-image: url('https://as1.ftcdn.net/v2/jpg/04/98/00/48/1000_F_498004866_lrSnYchHLlYABJH7PL7bOngKT8HUrhsD.jpg');
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
}

.parent {
    display: flex;
    width: 100%;
}

.parent > div {
    width: 33%;
}

.article img {
    width: 100%;
    height: auto;
}

h1 {
    font-family: Impact, Lato;
    text-align: center;
    text-decoration:dotted;
    font-size: 1.5em;
    padding-left: 30px;
}

h2 {
    font-family: Impact, Lato;
    text-align: center;
    text-decoration:dotted;
    font-size: 1.5em;
    color: darkred;
    padding-left: 30px;
}

h3 {
    font-family: Impact, Lato;
    text-decoration:dotted;
    font-size: 1.5em;
    padding-left: 30px;
}

.contact.info h3 {
    text-align: right;
}

ul {
    list-style: none;
}

ul li {
    display: inline;
    margin-right: 20px;
}

.featured-article {
    background-color: white;; 
    padding: 10px;
    padding-bottom: 5%;
    font-size: larger;
    text-align: center;
}


.featured-article img {
    width: 80%;
    height: auto;
}

.Industry, .career, .technical {
    background-color: #fff; 
    color: #242222; 
    padding: 10px;
    padding-bottom: 5%;
}

.Industry a, .career a, .technical a, .featured-article a {
    text-decoration: none; 
    background-color: #333; 
    color: #fff; 
    padding: 5px 10px; 
    border-radius: 5px; 
    display: inline-block;
}

.career .author {
    background-color: purple;
    color: #fff;
}

.technical .author {
    background-color: #000;
    color: #fff;
}

#visitors{
    background-color: #a0b54c6e; 
    color: #242222; 
    padding: 10px;
    padding-left: 40%;
    padding-bottom: 5%;
    border: 1px solid #000;
}

form {
    background-color: yellow;
    color: darkred;
    padding: 50px;
    margin: 20%;
}

address {
    text-align: right;
    text-decoration:dotted;
    color:#fff
}

iframe {
    width: 100%;
    height: 400px;
}

footer {
    font: 1em Impact, Lato;
    background-color: lightcoral;
    font-size: 20px;
    color: white;
    padding-bottom: 10px;
    text-align: center;
    position: fixed;
    width: 100%;
    bottom: 0;
    left: 0;
}

input[type="text"]:required {
    border: 2px solid red;
}

.main-content {
    padding-top: 15rem;
    padding-bottom: 15rem;
    overflow: auto;
}

@media (max-width: 600px) {
    .parent {
        flex-direction: column;
        align-items: center;
        width: 100%;
    }


    p {
        font-size: 1.2em; 
        line-height: 1.5em; 
    }

    header img {
        max-width: 30%;
    }
    
}

